Add scratchpadd and polls-eda notebook

--- a/scratchpad.ipynb
+++ b/scratchpad.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "9e5d71b8",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,17 @@
     "pd.set_option('display.max_columns', None)\n",
     "\n",
     "from plotnine import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f269971f",
+   "metadata": {},
+   "source": [
+    "> SideQuest 🤖 -- Learning R (and ggplot)\n",
+    ">\n",
+    "> If you're already comfortable with Python and would prefer to try playing the class in \"hard mode\", you're welcome to give learning ggplot in R a shot! If you'd like to take on this SideQuest, check out [this notebook](https://nbviewer.org/github/dmil/jupyter-quickstart/blob/master/notebook.ipynb) which will help you to set up Jupyter notebooks where you can easily switch between R and Python! You can submit this assignment one of those notebooks if you prefer.\n",
+    "\n"
    ]
   },
   {
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "10ea4aa0",
    "metadata": {},
    "outputs": [
@@ -102,6 +113,8 @@
        "      <th>rightcall</th>\n",
        "      <th>advancedplusminus</th>\n",
        "      <th>comment</th>\n",
+       "      <th>national</th>\n",
+       "      <th>days_until_election</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -119,7 +132,7 @@
        "      <td>32</td>\n",
        "      <td>Live Phone</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>10/13/1998</td>\n",
+       "      <td>1998-10-13</td>\n",
        "      <td>364.0</td>\n",
        "      <td>Peter Vallone</td>\n",
        "      <td>13080</td>\n",
@@ -131,7 +144,7 @@
        "      <td>57.0</td>\n",
        "      <td>9.0</td>\n",
        "      <td>-31.0</td>\n",
-       "      <td>11/3/1998</td>\n",
+       "      <td>1998-11-03</td>\n",
        "      <td>33.16</td>\n",
        "      <td>54.32</td>\n",
        "      <td>-21.15</td>\n",
@@ -140,6 +153,8 @@
        "      <td>1.0</td>\n",
        "      <td>1.461561</td>\n",
        "      <td>for New York Daily News | WABC-TV (New York)</td>\n",
+       "      <td>False</td>\n",
+       "      <td>21 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -155,7 +170,7 @@
        "      <td>346</td>\n",
        "      <td>Live Phone</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>10/13/1998</td>\n",
+       "      <td>1998-10-13</td>\n",
        "      <td>540.0</td>\n",
        "      <td>Lee Fisher</td>\n",
        "      <td>13085</td>\n",
@@ -167,7 +182,7 @@
        "      <td>52.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-15.0</td>\n",
-       "      <td>11/3/1998</td>\n",
+       "      <td>1998-11-03</td>\n",
        "      <td>44.69</td>\n",
        "      <td>50.05</td>\n",
        "      <td>-5.36</td>\n",
@@ -176,6 +191,8 @@
        "      <td>1.0</td>\n",
        "      <td>4.285789</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>21 days</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -190,28 +207,28 @@
        "0       Gov-G              Blum & Weprin Associates                  32   \n",
        "1       Gov-G  University of Cincinnati (Ohio Poll)                 346   \n",
        "\n",
-       "  methodology partisan    polldate  samplesize     cand1_name  cand1_id  \\\n",
-       "0  Live Phone      NaN  10/13/1998       364.0  Peter Vallone     13080   \n",
-       "1  Live Phone      NaN  10/13/1998       540.0     Lee Fisher     13085   \n",
+       "  methodology partisan   polldate  samplesize     cand1_name  cand1_id  \\\n",
+       "0  Live Phone      NaN 1998-10-13       364.0  Peter Vallone     13080   \n",
+       "1  Live Phone      NaN 1998-10-13       540.0     Lee Fisher     13085   \n",
        "\n",
        "  cand1_party  cand1_pct     cand2_name  cand2_id cand2_party  cand2_pct  \\\n",
        "0         DEM       26.0  George Pataki     13083         REP       57.0   \n",
        "1         DEM       37.0       Bob Taft     13086         REP       52.0   \n",
        "\n",
        "   cand3_pct  margin_poll electiondate  cand1_actual  cand2_actual  \\\n",
-       "0        9.0        -31.0    11/3/1998         33.16         54.32   \n",
-       "1        NaN        -15.0    11/3/1998         44.69         50.05   \n",
+       "0        9.0        -31.0   1998-11-03         33.16         54.32   \n",
+       "1        NaN        -15.0   1998-11-03         44.69         50.05   \n",
        "\n",
        "   margin_actual  error  bias  rightcall  advancedplusminus  \\\n",
        "0         -21.15   9.85 -9.85        1.0           1.461561   \n",
        "1          -5.36   9.64 -9.64        1.0           4.285789   \n",
        "\n",
-       "                                        comment  \n",
-       "0  for New York Daily News | WABC-TV (New York)  \n",
-       "1                                           NaN  "
+       "                                        comment  national days_until_election  \n",
+       "0  for New York Daily News | WABC-TV (New York)     False             21 days  \n",
+       "1                                           NaN     False             21 days  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,10 +236,16 @@
    "source": [
     "# read raw_polls.csv from FiveThirtyEighta\n",
     "raw_polls_url = 'https://raw.githubusercontent.com/fivethirtyeight/data/master/pollster-ratings/raw-polls.csv'\n",
-    "polls = pd.read_csv(raw_polls_url)\n",
+    "polls = pd.read_csv(raw_polls_url, parse_dates=['electiondate', 'polldate'])\n",
     "\n",
     "# saves a copy of this CSV onto your computer\n",
     "polls.to_csv('raw_polls.csv', index=False) \n",
+    "\n",
+    "# add a column to separate national polls from state level polls\n",
+    "polls['national'] = polls['location'].apply(lambda x: True if x=='US' else False)\n",
+    "\n",
+    "# add a column that counts the days until the election\n",
+    "polls['days_until_election'] = polls['electiondate'] - polls['polldate']\n",
     "\n",
     "# show the first 2 rows of the data frame\n",
     "polls.head(2)"
@@ -307,17 +330,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f269971f",
-   "metadata": {},
-   "source": [
-    "> SideQuest 🤖 -- Learning R (and ggplot)\n",
-    ">\n",
-    "> If you're already comfortable with Python and would prefer to try playing the class in \"hard mode\", you're welcome to give learning ggplot in R a shot! If you'd like to take on this SideQuest, check out [this notebook](https://nbviewer.org/github/dmil/jupyter-quickstart/blob/master/notebook.ipynb) which will help you to set up Jupyter notebooks where you can easily switch between R and Python! You can submit this assignment one of those notebooks if you prefer.\n",
-    "\n"
-   ]
   }
  ],
  "metadata": {
